# pure_soul

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  mock.py  pyproject.toml  pytest.ini  run_web.py  test.py  test_token.py
alembic/: env.py
alembic/versions/: 077207daac08_added_more_assoc_tables.py  0b4007d3e616_added_unqiue_on_albums.py  3b76a8763dff_initial_tables.py  3f149f24390c_added_payment.py  51d5fe4c7ae4_added_on_delete_on_albums.py  53b04ee8f219_ff.py  7a684572e8bf_added_albums_and_assoc_tables.py  94a6fcf6f5e8_added_playlists_table_with_m2m.py  a854bd39d775_added_on_delete_on_albums.py  e3ac370fdee8_added_fk_for_songs_to_users.py  ee6c7d4e35f6_added_more.py  f0a4663f8f69_refactored_albums_logic.py  f35443ac34d9_added_on_cascade_delete.py  fb4dab541081_added_payment_method_to_sub.py
src/adapters/: file_storage.py  id_provider.py  password_hasher.py  payment_providers.py  token_generator.py
src/application/: add_subscription.py  create_album.py  create_artist.py  create_playlist.py  create_song.py  create_user.py  download_presigned_url.py  find_artists_by_names.py  get_feed.py  get_genres.py  get_payment_types.py  get_song.py  get_tiers.py  login_user.py
src/application/common/: dto.py  file_storage.py  helpers.py  id_provider.py  interactor.py  music_gateway.py  payment_gateway.py  payment_provider.py  subscription_gateway.py  tiers_gateway.py  token_generator.py  transaction_manager.py  user_gateway.py
src/domain/: album.py  artist.py  exceptions.py  song.py  types.py
src/domain/iam/: constants.py  exceptions.py  grant.py  user.py
src/domain/subscription/: model.py
src/main/: ioc.py  web.py
src/presentation/: inmemory_file_converter.py  interactor_factory.py  router.py
src/presentation/artist/: router.py
tests/: test_exist.py  test_hasher.py  test_token.py
tests/integration/: conftest.py  test_music.py  test_root.py
(+82 files in other folders)
