[project]
name = "puresoul"
version = "0.1.0"
description = ""
authors = [
    {name = "stanislavmisko",email = "miskostanislau@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "boto3 (>=1.38.3,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
]

[tool.poetry]
name = "puresoul"
packages = [
    { include = "puresoul", from = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
